syntax = "proto3";

package mock;

option go_package = "github.com/lightsparkdev/spark/proto/mock";
import "google/protobuf/empty.proto";

service MockService {
    rpc clean_up_preimage_share(CleanUpPreimageShareRequest) returns (google.protobuf.Empty) {}
    rpc update_nodes_status(UpdateNodesStatusRequest) returns (google.protobuf.Empty) {}
    // Triggers the execution of a scheduled task immediately by name. Used by hermetic tests
    rpc trigger_task(TriggerTaskRequest) returns (google.protobuf.Empty) {}
}

message CleanUpPreimageShareRequest {
    bytes payment_hash = 1;
}

message UpdateNodesStatusRequest {
    repeated string node_ids = 1;
    string status = 2;
}

// TriggerTaskRequest is used to trigger a scheduled task immediately in hermetic tests.
message TriggerTaskRequest {
    string task_name = 1;
}
